--- a/user/booking.html
+++ b/user/booking.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reservation</title>
-    <link rel="stylesheet" href="../assets/images/css/user/about.css">
+    <link rel="stylesheet" href="../assets/css/user/booking.css">
     <link rel="stylesheet" href="../assets/css/user/footer.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <nav class="navbar">
-      <img src="/assets/logo/raflora-logo.jpg" alt="logo" class="logo" />
+      <img src="../assets/images/logo/raflora-logo.jpg" alt="logo" class="logo" />
       <ul class="nav-links">
         <li><a href="landing.html" class="nav-link">Home</a></li>
         <li><a href="gallery.html" class="nav-link">Gallery</a></li>
         <li><a href="about.html" class="nav-link">About</a></li>
-        <!-- <li><a href="#logout"><img src="/assets/icon/user.png" class="user" alt="user"></a></li> -->
+        <!-- <li><a href="#logout"><img src="../assets/css/icon/user.png" class="user" alt="user"></a></li> -->
         
       </ul>
       
@@ -63,11 +63,11 @@
                         <label for="event-schedule">Event Schedule</label>
                         <div class="date-time-group">
                             <div class="date-field">
-                                <img src="/assets/images//icon/calendar.png" alt="Calendar icon">
+                                <img src="../assets/images//icon/calendar.png" alt="Calendar icon">
                                 <input type="date" id="event-date">
                             </div>
                             <div class="time-field">
-                                <img src="/assets/images//icon/clock.png" alt="Clock icon">
+                                <img src="../assets/images//icon/clock.png" alt="Clock icon">
                                 <input type="time" id="event-time">
                             </div>
                         </div>
@@ -126,19 +126,19 @@
                     <div class="design-upload-group">
                         <div class="design-upload-box">
                             <label for="design-upload-1">
-                                <img src="/assets/images//icon/upload_image_placeholder.png" alt="Upload design image">
+                                <img src="../assets/images//icon/upload_image_placeholder.png" alt="Upload design image">
                             </label>
                             <input type="file" id="design-upload-1" class="file-input">
                         </div>
                         <div class="design-upload-box">
                             <label for="design-upload-2">
-                                <img src="/assets/images//icon/upload_image_placeholder.png" alt="Upload design image">
+                                <img src="../assets/images//icon/upload_image_placeholder.png" alt="Upload design image">
                             </label>
                             <input type="file" id="design-upload-2" class="file-input">
                         </div>
                         <div class="design-upload-box">
                             <label for="design-upload-3">
-                                <img src="/assets/images//icon/upload_image_placeholder.png" alt="Upload design image">
+                                <img src="../assets/images//icon/upload_image_placeholder.png" alt="Upload design image">
                             </label>
                             <input type="file" id="design-upload-3" class="file-input">
                         </div>
