--- a/admin_dashboard/analytics.html
+++ b/admin_dashboard/analytics.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Performance Analytics</title>
-    <link rel="stylesheet" href="/admin/css/analytics.css">
+    <link rel="stylesheet" href="../assets/css/admin/analytics.css">
 </head>
 <body>
     <div class="sidebar">
         <div class="logo">
-            <h1>RAFLORA</h1>
-            <p>FLOWERS & EVENTS</p>
+            <img src="../assets/images/logo/raflora-logo.jpg" alt="raflora logo">
         </div>
         <ul class="sidebar-menu">
             <li>
-                <span class="icon">🔧</span>
-                <span>Tools and Equipment</span>
+                <span class="icon"><img src="../assets/images/icon/tools_equipment.png" alt="inventory"></span>
+                <span><a href="../admin_dashboard/inventory.html">Tools and Equipment</span></a>
             </li>
             <li>
-                <span class="icon">👥</span>
-                <span>Client updates</span>
+                <span class="icon"><img src="../assets/images/icon/client_updates.png" alt="client updates"></span>
+                <a href="../admin_dashboard/update.html"><span>Client updates</span></a>
             </li>
             <li>
-                <span class="icon">📄</span>
-                <span>Invoice</span>
+                <span class="icon"><img src="../assets/images/icon/invoice.png" alt="invoice"></span>
+                <span><a href="../admin_dashboard/invoice.html">Invoice</span></a>
             </li>
             <li class="active">
-                <span class="icon">📊</span>
-                <span>Performance Analytics</span>
+                <span class="icon"><img src="../assets/images/icon/perfo_analy.png" alt="perforamance analytics"></span>
+                <span><a href="../admin_dashboard/analytics.html">Performance Analytics</span></a>
+                
             </li>
         </ul>
     </div>
