New updates with user recognition

--- a/guest/g-gallery.html
+++ b/guest/g-gallery.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gallery Raflora Enterprises</title>
-  <link rel="stylesheet" href="../assets/css/user/gallery.css">
-  <link rel="stylesheet" href="../assets/css/user/footer.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Gallery Raflora Enterprises</title>
+        <link rel="stylesheet" href="../assets/css/user/gallery.css">
+        <link rel="stylesheet" href="../assets/css/user/footer.css">
 </head>
 <body>
-  <!-- Navigation Bar -->
-  <div class="gallery-container">
-    <nav class="navbar">
-      <img src="../assets/images/logo/raflora-logo.jpg" alt="logo" class="logo" />
-      <ul class="nav-links">
-        <li><a href="landing.html" class="nav-link">Home</a></li>
-        <li><a href="gallery.html" class="nav-link">Gallery</a></li>
-        <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="login.html" class="nav-link">Log-in</a></li>
-      </ul>
-    </nav>
-  
-    <!-- Gallery Header Section -->
+  <div class="about-container">
+        <nav class="navbar">
+            <img src="../assets/images/logo/raflora-logo.jpg" alt="logo" class="logo" />
+            <ul class="nav-links">
+                <li><a href="../guest/g-home.html" class="nav-link">Home</a></li>
+                <li><a href="../guest/g-gallery.html" class="nav-link">Gallery</a></li>
+                <li><a href="../guest/g-about.html" class="nav-link">About</a></li>
+                <li><a href="../user/login.html" class="nav-link">Log-in</a></li>
+            </ul>
+        </nav>
         <div class="Gallery-Page">
           <div class="Header-Bg">
             <h1>Raflora <br>Enterprises</h1>
