--- a/admin_dashboard/invoice.html
+++ b/admin_dashboard/invoice.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invoice</title>
     <link rel="stylesheet" href="../assets/css/admin/invoice.css">
-    <link rel="stylesheet" href="/css/invoice.css">
 </head>
 <body>
     <div class="sidebar">
@@ -15,7 +14,7 @@
         <ul class="sidebar-menu">
             <li>
                 <span class="icon"><img src="../assets/images/icon/tools_equipment.png" alt="inventory"></span>
-                <span><a href="../admin_dashboard/inventory.html">Tools and Equipment</span></a>
+                <span><a href="../admin_dashboard/inventory.php">Tools and Equipment</span></a>
             </li>
             <li>
                 <span class="icon"><img src="../assets/images/icon/client_updates.png" alt="client updates"></span>
@@ -36,7 +35,7 @@
     <div class="main-content">
         <div class="header">
             <h1>Inventory and Event Management</h1>
-            <button class="logout-btn">Log-out</button>
+            <button class="logout-btn"><a href="../api/logout.php">Log-out</button></a>
         </div>
 
         <div class="dashboard-content">
