Linking the book and bill pages

--- a/admin_dashboard/update.html
+++ b/admin_dashboard/update.html
@@ -76,7 +76,7 @@
                     <div class="form-group">
                         <div class="payment-info">Half payment</div>
                     </div>
-                    <button class="placeorder-btn" id="oder-btn">Place Order</button>
+                    <button class="placeorder-btn">Place Order</button>
                 </div>
 
                 <div class="themes-section">
