--- a/guest/g-gallery.html
+++ b/guest/g-gallery.html
@@ -6,14 +6,20 @@
         <title>Gallery Raflora Enterprises</title>
         <link rel="stylesheet" href="../assets/css/user/gallery.css">
         <link rel="stylesheet" href="../assets/css/user/footer.css">
+        <link rel="stylesheet" href="../assets/css/user/navbar.css">
+        <script src="../assets/js/user/navbar.js" defer></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 </head>
 <body>
   <div class="about-container">
-        <nav class="navbar">
+       <nav class="navbar">
             <img src="../assets/images/logo/raflora-logo.jpg" alt="logo" class="logo" />
+            <div class="hamburger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
             <ul class="nav-links">
                 <li><a href="../guest/g-home.html" class="nav-link">Home</a></li>
-                <li><a href="../guest/g-gallery.html" class="nav-link">Gallery</a></li>
+                <li class="active"><a href="../guest/g-gallery.html" class="nav-link">Gallery</a></li>
                 <li><a href="../guest/g-about.html" class="nav-link">About</a></li>
                 <li><a href="../user/login.html" class="nav-link">Log-in</a></li>
             </ul>
