--- a/guest/g-home.html
+++ b/guest/g-home.html
@@ -7,20 +7,24 @@
     <title>Raflora Enterprises</title>
     <link rel="stylesheet" href="../assets/css/user/landing.css">
     <link rel="stylesheet" href="../assets/css/user/footer.css">
+    <link rel="stylesheet" href="../assets/css/user/navbar.css">
+    <script src="../assets/js/user/navbar.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 </head>
 <body>
     <div class="landing-container">
         <nav class="navbar">
             <img src="../assets/images/logo/raflora-logo.jpg" alt="logo" class="logo" />
+            <div class="hamburger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
             <ul class="nav-links">
-                <li><a href="../guest/g-home.html" class="nav-link">Home</a></li>
+                <li class="active"><a href="../guest/g-home.html" class="nav-link">Home</a></li>
                 <li><a href="../guest/g-gallery.html" class="nav-link">Gallery</a></li>
                 <li><a href="../guest/g-about.html" class="nav-link">About</a></li>
                 <li><a href="../user/login.html" class="nav-link">Log-in</a></li>
             </ul>
         </nav>
-        
         <div class="Landing-page">
             <div class="Home-bg">
                 <h1>Raflora Enterprises</h1>
