--- a/admin_dashboard/analytics.html
+++ b/admin_dashboard/analytics.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Performance Analytics</title>
-    <link rel="stylesheet" href="../assets/css/admin/analytics.css">
+    <!-- <link rel="stylesheet" href="../assets/css/admin/analytics.css"> -->
+     <link rel="stylesheet" href="../assets/css/admin/admin_dashboard.css">
 </head>
 <body>
     <div class="sidebar">
@@ -35,7 +36,7 @@
     <div class="main-content">
         <div class="header">
             <h1>Inventory and Event Management</h1>
-            <button class="logout-btn"><a href="../api/logout.php">Log-out</button></a>
+            <button class="logout-btn"><a href="../api/logout.php">Log-out</a></button>
         </div>
 
         <div class="dashboard-content">
