--- a/admin_dashboard/invoice.html
+++ b/admin_dashboard/invoice.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invoice</title>
-    <link rel="stylesheet" href="../assets/css/admin/invoice.css">
+    <!-- <link rel="stylesheet" href="../assets/css/admin/invoice.css"> -->
+     <link rel="stylesheet" href="../assets/css/admin/admin_dashboard.css">
 </head>
 <body>
     <div class="sidebar">
@@ -69,7 +70,7 @@
                                 <td>+69 9123456789</td>
                                 <td>wedding</td>
                                 <td>04-27-25</td>
-                                <td><span class="status-half">Half Payment</span></td>
+                                <td><span class="status-half">Down Payment</span></td>
                                 <td><span class="payment-online">Online Bank</span></td>
                             </tr>
                             <tr>
@@ -79,7 +80,7 @@
                                 <td>+69 9365215685</td>
                                 <td>Hotel Venue</td>
                                 <td>03-10-25</td>
-                                <td><span class="status-half">Half Payment</span></td>
+                                <td><span class="status-half">Down Payment</span></td>
                                 <td><span class="payment-online">Online Bank</span></td>
                             </tr>
                             <tr>
@@ -198,5 +199,6 @@
             </div>
         </div>
     </div>
+    <script src="../assets/css/admin/admin_dashboard.js"></script>
 </body>
 </html>
