--- a/admin_dashboard/update.html
+++ b/admin_dashboard/update.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client Updates</title>
-    <link rel="stylesheet" href="../assets/css/admin/update.css">
+    <!-- <link rel="stylesheet" href="../assets/css/admin/update.css"> -->
+    <link rel="stylesheet" href="../assets/css/admin/admin_dashboard.css">
 </head>
 <body>
     <div class="sidebar">
