--- a/guest/g-home.html
+++ b/guest/g-home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -22,7 +21,8 @@
                 <li class="active"><a href="../guest/g-home.html" class="nav-link">Home</a></li>
                 <li><a href="../guest/g-gallery.html" class="nav-link">Gallery</a></li>
                 <li><a href="../guest/g-about.html" class="nav-link">About</a></li>
-                <li><a href="../user/login.html" class="nav-link">Log-in</a></li>
+                <li><a href="../user/user_login.php" class="nav-link">Log-in</a></li>
+
             </ul>
         </nav>
         <div class="Landing-page">
